Update admin menu

--- a/WebWooden/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/WebWooden/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -504,8 +504,9 @@
         </ul>
 
     </aside><!-- End Sidebar-->
-
+    <main id="main" class="main">
     @RenderBody()
+    </main><!-- End #main -->
     <!-- ======= Footer ======= -->
     <footer id="footer" class="footer">
         <div class="copyright">
