--- a/WebWooden/Views/Home/Index.cshtml
+++ b/WebWooden/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
 	List<TbProductCategory> productCategories = ViewBag.productCategories;
+	List<TbProduct> productnew = ViewBag.Productnew;
 	List<TbNews> tbNews = ViewBag.News;
 }
 <header class="">
