update Navigation (menucontroller)

--- a/WebWooden/Areas/Admin/Views/Login/Index.cshtml
+++ b/WebWooden/Areas/Admin/Views/Login/Index.cshtml
@@ -69,7 +69,7 @@
                     <p class="text-center small">Enter your username & password to login</p>
                   </div>
 
-                  <form class="row g-3 needs-validation" asp-controller="Login" asp-action="Index" >
+                  <form asp-controller="Login" asp-action="Index" >
 
                     <div class="col-12">
                       <label for="yourUsername" class="form-label">Username</label>
