--- a/WebWooden/Views/Home/Index.cshtml
+++ b/WebWooden/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿
+@{
 	List<TbProductCategory> productCategories = ViewBag.productCategories;
 	List<TbProduct> productnew = ViewBag.Productnew;
 	List<TbNews> tbNews = ViewBag.News;
@@ -103,7 +104,7 @@
 
 
 
-</div>
+
 
 <!-- ABOUT US -->
 <div class="about-us">
@@ -239,6 +240,7 @@
 </div>
 
 <!-- PARTNER -->
+<!-- PARTNER -->
 <div class="partner">
 	<div class="container">
 		<h2 class="header-ptn"> Đối tác </h2>
@@ -272,6 +274,7 @@
 		</div>
 	</div>
 </div>
+
 
 <!-- CONTACT -->
 <div class="contact contact-index">
