--- a/WebWooden/Views/Shared/Components/MenuTop/Default.cshtml
+++ b/WebWooden/Views/Shared/Components/MenuTop/Default.cshtml
@@ -1,6 +1,11 @@
 ﻿@model IEnumerable<WebWooden.Models.TbMenu>
-@foreach(var item in Model.Where(i=>i.Levels == 1))
-{
-	<li><a href="about.html"> @item.Title </a></li>
-	
-}
+
+<ul>
+    @foreach (var item in Model.Where(i => i.Levels == 1))
+    {
+        <li >
+            <a  href="@Url.Action(item.Alias, "Menu")">@item.Title</a>
+        </li>
+    }
+</ul>
+
