--- a/WebWooden/Views/Blog/Details.cshtml
+++ b/WebWooden/Views/Blog/Details.cshtml
@@ -1,5 +1,6 @@
-﻿@model TbBlog
+﻿@model IEnumerable<TbProduct>
 @{
+    TbBlog blog = ViewBag.Blog; 
     List<TbBlogComment> blogComment = ViewBag.blogComment;
 }
 
@@ -32,22 +33,22 @@
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <a href="#" class="single-img gallery-popup">
-                                        <img class="img-full" src="~/images/AnhCat/@Model.Image" alt="Product Image">
+                                        <img class="img-full" src="~/images/AnhCat/@blog.Image" alt="Product Image">
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
                                     <a href="#" class="single-img gallery-popup">
-                                        <img class="img-full" src="~/images/AnhCat/@Model.Image" alt="Product Image">
+                                        <img class="img-full" src="~/images/AnhCat/@blog.Image" alt="Product Image">
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
                                     <a href="#" class="single-img gallery-popup">
-                                        <img class="img-full" src="~/images/AnhCat/@Model.Image" alt="Product Image">
+                                        <img class="img-full" src="~/images/AnhCat/@blog.Image" alt="Product Image">
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
                                     <a href="#" class="single-img gallery-popup">
-                                        <img class="img-full" src="~/images/AnhCat/@Model.Image" alt="Product Image">
+                                        <img class="img-full" src="~/images/AnhCat/@blog.Image" alt="Product Image">
                                     </a>
                                 </div>
                             </div>
@@ -60,10 +61,10 @@
                     <div class="product-thumb-with-content row">
                         <div class="col-12 order-lg-1 order-2 pt-10 pt-lg-0">
                             <div class="single-product-content">
-                                <h2 class="title">@Model.Title</h2>
+                                <h2 class="title">@blog.Title</h2>
                                 <div class="blog-meta text-dim-gray pb-3">
                                     <ul>
-                                        <li class="date"><i class="fa fa-calendar-o me-2"></i>@Model.CreatedDate.Value.ToString("dd/MM/yyyy")</li>
+                                        <li class="date"><i class="fa fa-calendar-o me-2"></i>@blog.CreatedDate.Value.ToString("dd/MM/yyyy")</li>
                                         <li>
                                             <span class="comments me-3">
                                                 <a href="javascript:void(0)">@blogComment.Count() Comments</a>
@@ -89,11 +90,11 @@
                            
                             <div class="blog-comment pt-10">
                                 <h4 class="heading mb-7">@blogComment.Count() Comments</h4>
-                                @foreach (var item in blogComment)
+                                @foreach (var item in blog.TbBlogComments)
                                 {
                                     <div class="blog-comment-item mb-8">
                                         <div class="blog-comment-img">
-                                            <img src="~/assets/images/avatar/1.jpg" alt="Avatar">
+                                            <img src="~/images/AnhCat/@item.Image" alt="Avatar">
                                         </div>
                                         <div class="blog-comment-content">
                                             <div class="user-meta">
