--- a/WebWooden/Views/Product/Details.cshtml
+++ b/WebWooden/Views/Product/Details.cshtml
@@ -1,9 +1,8 @@
-﻿@model TbProduct
+﻿@model IEnumerable<TbProduct>
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    List<TbProductReview> productReviews = ViewBag.productReviews;
     List<TbProduct> productRelated = ViewBag.productRelated;
-
+    var product = Model.FirstOrDefault();
 }
 
 <main class="main-content">
@@ -32,23 +31,23 @@
                         <div class="swiper-container single-product-slider">
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <a href="~/images/AnhCat/@Model.Image" class="single-img gallery-popup">
-                                        <img class="img-full" src="~/images/AnhCat/@Model.Image" alt="Product Image">
+                                    <a href="~/images/AnhCat/@product.Image" class="single-img gallery-popup">
+                                        <img class="img-full" src="~/images/AnhCat/@product.Image" alt="Product Image">
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="~/images/AnhCat/@Model.Image" class="single-img gallery-popup">
-                                        <img class="img-full" src="~/images/AnhCat/@Model.Image" alt="Product Image">
+                                    <a href="~/images/AnhCat/@product.Image" class="single-img gallery-popup">
+                                        <img class="img-full" src="~/images/AnhCat/@product.Image" alt="Product Image">
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="~/images/AnhCat/@Model.Image" class="single-img gallery-popup">
-                                        <img class="img-full" src="~/images/AnhCat/@Model.Image" alt="Product Image">
+                                    <a href="~/images/AnhCat/@product.Image" class="single-img gallery-popup">
+                                        <img class="img-full" src="~/images/AnhCat/@product.Image" alt="Product Image">
                                     </a>
                                 </div>
                                 <div class="swiper-slide">
-                                    <a href="~/images/AnhCat/@Model.Image" class="single-img gallery-popup">
-                                        <img class="img-full" src="~/images/AnhCat/@Model.Image" alt="Product Image">
+                                    <a href="~/images/AnhCat/@product.Image" class="single-img gallery-popup">
+                                        <img class="img-full" src="~/images/AnhCat/@product.Image" alt="Product Image">
                                     </a>
                                 </div>
                             </div>
@@ -61,23 +60,23 @@
                     <div class="product-thumb-with-content row">
                         <div class="col-12 order-lg-1 order-2 pt-10 pt-lg-0">
                             <div class="single-product-content">
-                                <h2 class="title">@Model.Title</h2>
+                                <h2 class="title">@product.Title</h2>
                                 <div class="price-box pb-1">
-                                    @if (Model.PriceSale == 0)
+                                    @if (product.PriceSale == 0)
                                     {
-                                        <span class="new-price text-danger">$@Model.Price</span>
+                                        <span class="new-price text-danger">$@product.Price</span>
 
                                     }
                                     else
                                     {
-                                        <span class="new-price text-danger">$@Model.PriceSale</span>
-                                        <span class="old-price text-primary">$@Model.Price</span>
+                                        <span class="new-price text-danger">$@product.PriceSale</span>
+                                        <span class="old-price text-primary">$@product.Price</span>
                                     }
                                 </div>
                                 <div class="rating-box-wrap pb-7">
                                     <div class="rating-box">
                                         <ul>
-                                            @for (var i = 0; i < Model.Star; i++)
+                                            @for (var i = 0; i < product.Star; i++)
                                             {
                                                 <li><i class="pe-7s-star"></i></li>
                                             }
@@ -85,11 +84,11 @@
 
                                     </div>
                                     <div class="review-status ps-4">
-                                        <a href="javascript:void(0)">( @productReviews.Count() Customer Review )</a>
+                                        <a href="javascript:void(0)">( @product.TbProductReviews.Count() Customer Review )</a>
                                     </div>
                                 </div>
                                 <p class="short-desc mb-6">
-                                    @Model.Description
+                                    @product.Description
                                 </p>
                                 <ul class="quantity-with-btn pb-7">
                                     <li class="quantity">
@@ -168,16 +167,16 @@
                             <div class="swiper-container single-product-thumbs">
                                 <div class="swiper-wrapper">
                                     <a href="javascript:void(0)" class="swiper-slide">
-                                        <img class="img-full" src="~/images/AnhCat/@Model.Image" alt="Product Thumnail">
+                                        <img class="img-full" src="~/images/AnhCat/@product.Image" alt="Product Thumnail">
                                     </a>
                                     <a href="javascript:void(0)" class="swiper-slide">
-                                        <img class="img-full" src="~/images/AnhCat/@Model.Image" alt="Product Thumnail">
+                                        <img class="img-full" src="~/images/AnhCat/@product.Image" alt="Product Thumnail">
                                     </a>
                                     <a href="javascript:void(0)" class="swiper-slide">
-                                        <img class="img-full" src="~/images/AnhCat/@Model.Image" alt="Product Thumnail">
+                                        <img class="img-full" src="~/images/AnhCat/@product.Image" alt="Product Thumnail">
                                     </a>
                                     <a href="javascript:void(0)" class="swiper-slide">
-                                        <img class="img-full" src="~/images/AnhCat/@Model.Image" alt="Product Thumnail">
+                                        <img class="img-full" src="~/images/AnhCat/@product.Image" alt="Product Thumnail">
                                     </a>
                                 </div>
                             </div>
@@ -208,16 +207,16 @@
                         <div class="tab-pane fade show active" id="description" role="tabpanel" aria-labelledby="description-tab">
                             <div class="product-description-body">
                                 <p class="short-desc mb-0">
-                                    @Html.Raw(Model.Detail)
+                                    @Html.Raw(product.Detail)
                                 </p>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
                             <div class="product-review-body">
-                                <h4 class="heading mb-5"> @(productReviews?.Count() ?? 0) Đánh giá</h4>
+                                <h4 class="heading mb-5"> @(product.TbProductReviews?.Count()) Đánh giá</h4>
 
                                 <ul class="user-info-wrap">
-                                    @foreach (var item in productReviews)
+                                    @foreach (var item in product.TbProductReviews)
                                     {
                                         <li>
                                             <ul class="user-info">
@@ -234,7 +233,11 @@
                                                         </ul>
                                                     </div>
                                                     <div class="meta">
-                                                        <span><strong>@item.Name </strong> @item.CreatedDate.Value.ToString("dd/MM/yyyy")</span>
+                                                        @if(item.CreatedDate != null)
+                                                        {<span><strong>@item.Name </strong> @item.CreatedDate.Value.ToString("dd/MM/yyyy")</span>}
+                                                        else{
+                                                            <strong>@item.Name </strong>
+                                                        }
                                                     </div>
                                                     <p class="short-desc mb-0">
                                                         @item.Detail
