--- a/WebWooden/Views/Shared/Components/Product/Default.cshtml
+++ b/WebWooden/Views/Shared/Components/Product/Default.cshtml
@@ -13,7 +13,7 @@
                 </a>
             </div>
             <div class="info">
-                <p class="name"> <a href="#">@item.Title</a>   </p>
+                <p class="name"> <a href="@sUrl">@item.Title</a>   </p>
                 <p class="vote">
                     @for (var i = 0; i <= @item.Star; i++)
                     {
