--- a/WebWooden/Areas/Admin/Views/Menus/Index.cshtml
+++ b/WebWooden/Areas/Admin/Views/Menus/Index.cshtml
@@ -4,6 +4,13 @@
     ViewData["Title"] = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
+<style>
+    th, td {
+        border: 1px solid #ddd;
+        padding: 8px;
+        text-align: center;
+    }
+</style>
 <div class="content-wrapper">
     <!-- Content Header (Page header) -->
     <section class="content-header">
